RESOLVED FIXED 60845
WKView does not draw after forced repaint before the first update
https://bugs.webkit.org/show_bug.cgi?id=60845
Summary WKView does not draw after forced repaint before the first update
mitz
Reported 2011-05-14 13:17:17 PDT
WKView does not draw after forced repaint before the first update
Attachments
Make paint() wait for an update if necessary after forceRepaint() (3.41 KB, patch)
2011-05-14 13:22 PDT, mitz
alice.barraclough: review+
mitz
Comment 1 2011-05-14 13:22:34 PDT
Created attachment 93564 [details] Make paint() wait for an update if necessary after forceRepaint()
mitz
Comment 2 2011-05-14 13:43:20 PDT
Note You need to log in before you can comment on or make changes to this bug.