WKView does not draw after forced repaint before the first update https://bugs.webkit.org/show_bug.cgi?id=60845

Reviewed by Alice Liu.

* UIProcess/DrawingAreaProxy.h:
(WebKit::DrawingAreaProxy::waitForBackingStoreUpdateOnNextPaint): Added.
* UIProcess/DrawingAreaProxyImpl.cpp:
(WebKit::DrawingAreaProxyImpl::waitForBackingStoreUpdateOnNextPaint): Set m_hasReceivedFirstUpdate
to true, ensuring that paint() will wait for an update if needed.
* UIProcess/DrawingAreaProxyImpl.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::forceRepaint): Call DrawingAreaProxy::waitForBackingStoreUpdateOnNextPaint().



Canonical link: https://commits.webkit.org/76147@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86495 268f45cc-cd09-0410-ab3c-d52691b4dbfc