Source/WebKit2/UIProcess/DrawingAreaProxy.h
@@ -86,7 +86,9 @@ public:
     // FIXME: These should be pure virtual.
     virtual void visibilityDidChange() { }
     virtual void setBackingStoreIsDiscardable(bool) { }
-    
+
+    virtual void waitForBackingStoreUpdateOnNextPaint() { }
+
     virtual void setPageIsVisible(bool isVisible) = 0;
 
     const WebCore::IntSize& size() const { return m_size; }
